// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:timeline dot size is adjusted 1`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-xl cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible auto-detail-class"
          >
            error
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-sm cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible auto-detail-class"
          >
            success
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-lg cxd-TimelineItem-hide-dot cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible auto-detail-class"
          >
            warning
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline itemTitleSchema 1`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              <div
                class="itemSchemaClassName"
              >
                节点数据
              </div>
            </span>
          </span>
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible"
          >
            detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              <div
                class="itemSchemaClassName"
              >
                节点数据
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--success"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              <div
                class="itemSchemaClassName"
              >
                节点数据
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--warning"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          <span
            class="cxd-TplField fr-view"
          >
            <span>
              <div
                class="itemSchemaClassName"
              >
                节点数据
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline items 1`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible"
          >
            detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--success"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--warning"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 1`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--success"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--warning"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 2`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-left"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--success"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--warning"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 3`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-alternate"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--success"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--warning"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 4`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-horizontal cxd-Timeline-top"
  >
    <div
      class="cxd-Timeline-first-line"
    >
      <div
        class="cxd-TimelineItem-content cxd-TimelineItem-content-align--center"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content cxd-TimelineItem-content-align--center"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content cxd-TimelineItem-content-align--center"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content cxd-TimelineItem-content-align--center"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
      </div>
    </div>
    <div
      class="cxd-Timeline-line"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--center"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--center"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--center"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--success"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--center"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--warning"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--warning"
          />
        </div>
      </div>
    </div>
    <div
      class="cxd-Timeline-second-line"
    >
      <div
        class="cxd-TimelineItem-content cxd-TimelineItem-content-align--center"
      >
        <div
          class="cxd-Timeline-inner-content-wrapper"
        >
          <div
            class="cxd-TimelineItem-title"
          >
            节点数据
          </div>
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content cxd-TimelineItem-content-align--center"
      >
        <div
          class="cxd-Timeline-inner-content-wrapper"
        >
          <div
            class="cxd-TimelineItem-title"
          >
            节点数据
          </div>
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content cxd-TimelineItem-content-align--center"
      >
        <div
          class="cxd-Timeline-inner-content-wrapper"
        >
          <div
            class="cxd-TimelineItem-title"
          >
            节点数据
          </div>
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content cxd-TimelineItem-content-align--center"
      >
        <div
          class="cxd-Timeline-inner-content-wrapper"
        >
          <div
            class="cxd-TimelineItem-title"
          >
            节点数据
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline mode direction 5`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--warning"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--success"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--success"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(79, 134, 244);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
            style="background-color: rgb(255, 178, 0);"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          节点数据
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeline source 1`] = `
<div>
  <div
    class="cxd-Timeline cxd-Timeline-vertical cxd-Timeline-right"
  >
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-07
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          数据开发
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible"
          >
            2019-02-07detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-08
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          管理中心
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible"
          >
            2019-02-08detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round cxd-TimelineItem-round-background--warning"
          />
          <div
            class="cxd-TimelineItem-dot cxd-TimelineItem-round--warning"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-09
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          SQL语句
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible"
          >
            2019-02-09detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-compress-alt"
            icon="compress-alt"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible"
          >
            2019-02-10detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-round-wrapper"
        >
          <div
            class="cxd-TimelineItem-round"
          />
          <div
            class="cxd-TimelineItem-dot"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible"
          >
            2019-02-11detail
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-TimelineItem"
    >
      <div
        class="cxd-TimelineItem-axle cxd-TimelineItem-size-md cxd-TimelineItem-point-align--top"
      >
        <div
          class="cxd-TimelineItem-line"
        />
        <div
          class="cxd-TimelineItem-icon"
        >
          <icon-mock
            classname="icon icon-close"
            icon="close"
          />
        </div>
      </div>
      <div
        class="cxd-TimelineItem-content"
      >
        <div
          class="cxd-TimelineItem-time"
        >
          2019-02-10
        </div>
        <div
          class="cxd-TimelineItem-title"
        >
          一键部署
        </div>
        <div
          class="cxd-TimelineItem-detail"
        >
          <div
            class="cxd-TimelineItem-detail-visible"
          >
            2019-02-12detail
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
